--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Parcel by Merge</title>
+    <title>TODO app</title>
     <link rel="stylesheet" href="./scss/style.scss" />
   </head>
   <body>
-    <div class="container index-page">
-      <h1 class="title index-page__title">Parcel by Merge</h1>
-      <a href="https://merge.rocks" target="_blank" class="cover">
-        <img src="./assets/images/cover.png" alt="merge" />
-      </a>
-    </div>
+    
+    
     <script type="module" src="./index.js"></script>
   </body>
 </html>
