--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./scss/style.scss" />
   </head>
   <body>
-    
+    <div></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
